<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WebScraper</string>
    <string name="url_hint">URL을 입력하세요</string>
    <string name="go_button_text">이동하기</string>
    <string name="macro_button_text">매크로</string>
    <string name="macro_cancel_button_text">중지</string>
    <string name="viewer_button_text">뷰어</string>
    <string name="history_button_text">URL 히스토리</string>
    <string name="history_dialog_title">URL 히스토리</string>
    <string name="history_clear_button">전체 삭제</string>
    <string name="history_close_button">닫기</string>

    <string name="viewer_back_button_text">←</string>
    <string name="viewer_settings_button_text">설정</string>
    <string name="viewer_file_list_button_text">목록</string>
    <string name="viewer_file_list_dialog_title">파일 목록</string>
    <string name="viewer_file_list_close_button">닫기</string>
    <string name="viewer_previous_button_text">◀ 이전</string>
    <string name="viewer_next_button_text">다음 ▶</string>
    <string name="viewer_empty_folder_text">폴더 안에 텍스트 파일이 없습니다.</string>
    <string name="viewer_no_folder_error">폴더 정보를 불러오지 못했습니다.</string>

    <string name="viewer_settings_dialog_title">뷰어 설정</string>
    <string name="viewer_settings_close_button">닫기</string>
    <string name="viewer_settings_preview_text">미리보기: 가나다 ABC 123</string>
    <string name="viewer_settings_background_label">배경색</string>
    <string name="viewer_settings_text_color_label">글자색</string>
    <string name="viewer_settings_text_size_label">글자 크기</string>
    <string name="viewer_settings_size_value">%dsp</string>
</resources>
